a first correction on mobile serach bar. Hide the punch line on mobile. Need to solve a problem with space between date picker and flexible date

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -101,3 +101,7 @@
 .input-group input {
   height: 37px;
 }
+
+.magin-topdiv {
+  margin-top:15px;
+}
